src/objects/LogEntryEvent__e.object
<CustomObject>
    <description>Platform Event object used by Nebula Logger for publishing debug and exception log entries</description>
    <fields>
        <fullName>ApiVersion__c</fullName>
        <label>API Version</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ComponentType__c</fullName>
        <label>Component Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DatabaseResultCollectionType__c</fullName>
        <label>Database Result Collection Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DatabaseResultJson__c</fullName>
        <label>Database Result JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DatabaseResultType__c</fullName>
        <label>Database Result Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EpochTimestamp__c</fullName>
        <description>Timestamp in milliseconds elapsed since 1 January 1970 of the log event</description>
        <label>Epoch Timestamp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExceptionMessage__c</fullName>
        <label>Exception Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExceptionStackTrace__c</fullName>
        <label>Exception Stack Trace</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExceptionType__c</fullName>
        <label>Exception Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LimitsAggregateQueriesMax__c</fullName>
        <label>Aggregate Queries Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsAggregateQueriesUsed__c</fullName>
        <label>Aggregate Queries Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsAggregateQueryMax__c</fullName>
        <label>Limits AggregateQueryMax_</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsAsyncCallsMax__c</fullName>
        <label>Async Calls Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsAsyncCallsUsed__c</fullName>
        <label>Async Calls Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsCalloutsMax__c</fullName>
        <label>Callouts Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsCalloutsUsed__c</fullName>
        <label>Callouts Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsCpuTimeMax__c</fullName>
        <label>CPU Time Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsCpuTimeUsed__c</fullName>
        <label>CPU Time Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsDmlRowsMax__c</fullName>
        <label>DML Rows Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsDmlRowsUsed__c</fullName>
        <label>DML Rows Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsDmlStatementsMax__c</fullName>
        <label>DML Statements Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsDmlStatementsUsed__c</fullName>
        <label>DML Statements Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsEmailInvocationsMax__c</fullName>
        <label>Email Invocations Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsEmailInvocationsUsed__c</fullName>
        <label>Email Invocations Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsFutureCallsMax__c</fullName>
        <label>Future Calls Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsFutureCallsUsed__c</fullName>
        <label>Future Calls Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsHeapSizeMax__c</fullName>
        <label>Heap Size Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsHeapSizeUsed__c</fullName>
        <label>Heap Size Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsMobilePushApexCallsMax__c</fullName>
        <label>Mobile Push Apex Calls Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsMobilePushApexCallsUsed__c</fullName>
        <label>Mobile Push Apex Calls Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsPublishImmediateDmlStatementsMax__c</fullName>
        <label>Publish Immediate Statements DML Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsPublishImmediateDmlStatementsUsed__c</fullName>
        <label>Publish Immediate Statements DML Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsQueueableJobsMax__c</fullName>
        <label>Queueable Jobs Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsQueueableJobsUsed__c</fullName>
        <label>Queueable Jobs Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsSoqlQueriesMax__c</fullName>
        <label>SOQL Queries Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsSoqlQueriesUsed__c</fullName>
        <label>SOQL Queries Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsSoqlQueryLocatorRowsMax__c</fullName>
        <label>SOQL Query Locator Rows Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsSoqlQueryLocatorRowsUsed__c</fullName>
        <label>SOQL Query Locator Rows Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsSoqlQueryRowsMax__c</fullName>
        <label>SOQL Query Rows Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsSoqlQueryRowsUsed__c</fullName>
        <label>SOQL Query Rows Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsSoslSearchesMax__c</fullName>
        <label>SOSL Searches Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitsSoslSearchesUsed__c</fullName>
        <label>SOSL Searches Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Locale__c</fullName>
        <label>Locale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoggedById__c</fullName>
        <label>Logged By ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoggedByUsername__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoggingLevelOrdinal__c</fullName>
        <label>Logging Level Ordinal</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LoggingLevel__c</fullName>
        <label>Logging Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoginApplication__c</fullName>
        <label>Login Application</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoginBrowser__c</fullName>
        <label>Login Browser</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoginDomain__c</fullName>
        <label>DEPRECATED: Login Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoginHistoryId__c</fullName>
        <label>Login History ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoginPlatform__c</fullName>
        <label>Login Platform</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoginType__c</fullName>
        <label>Login Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LogoutUrl__c</fullName>
        <label>Logout URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MessageMasked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Message Masked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MessageTruncated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Message Truncated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NetworkId__c</fullName>
        <label>Network ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetworkLoginUrl__c</fullName>
        <label>Site Login URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetworkLogoutUrl__c</fullName>
        <label>Site Logout URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetworkName__c</fullName>
        <description>The name of the user&apos;s Community site (based on NetworkId).</description>
        <label>Site Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetworkSelfRegistrationUrl__c</fullName>
        <label>Site Self Registration URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetworkUrlPathPrefix__c</fullName>
        <description>The UrlPathPrefix is a unique string at the end of the URL for this community. For example, in the community URL CommunitiesSubdomainName.force.com/customers, customers is the UrlPathPrefix.</description>
        <label>Site URL Path Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationDomainUrl__c</fullName>
        <description>The value returned from Url..getOrgDomainUrl()</description>
        <label>Organization Domain URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationEnvironmentType__c</fullName>
        <label>Organization Environment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationId__c</fullName>
        <label>Organization ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationInstanceName__c</fullName>
        <label>Organization Instance Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationName__c</fullName>
        <label>Organization Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationNamespacePrefix__c</fullName>
        <label>Organization Namespace Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationType__c</fullName>
        <label>Organization Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginLocation__c</fullName>
        <label>Origin Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginType__c</fullName>
        <label>Origin Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentLogTransactionId__c</fullName>
        <label>Parent Log Transaction ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfileId__c</fullName>
        <label>Profile ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfileName__c</fullName>
        <label>Profile Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordCollectionType__c</fullName>
        <label>Related Record Collection Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordId__c</fullName>
        <description>The ID of the record associated with a particular log entry. This is used for addRecordDebugEntry &amp; addRecordExceptionEntry methods</description>
        <label>Related Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordJsonMasked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Record JSON Masked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecordJson__c</fullName>
        <label>Related Record JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RecordSObjectClassification__c</fullName>
        <label>Related Record SObject Classification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordSObjectTypeNamespace__c</fullName>
        <label>Related Record Object Namespace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordSObjectType__c</fullName>
        <label>Related Record SObject Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SessionId__c</fullName>
        <label>SessionId</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SessionSecurityLevel__c</fullName>
        <label>Session Security Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SessionType__c</fullName>
        <label>Session Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceIp__c</fullName>
        <label>Source IP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StackTrace__c</fullName>
        <label>Stack Trace</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SystemMode__c</fullName>
        <label>System Mode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tags__c</fullName>
        <label>Tags</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ThemeDisplayed__c</fullName>
        <label>Theme Displayed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeZoneId__c</fullName>
        <label>Time Zone ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeZoneName__c</fullName>
        <label>Time Zone Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimestampString__c</fullName>
        <description>This field is used to circumvent a platform limitation - platform event datetimes are not accurately transferred to Apex triggers. This field stores a string version of the timestamp, which is then converted back to a datetime in Apex triggers.</description>
        <label>Timestamp String</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <label>Timestamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Topics__c</fullName>
        <label>DEPRECATED: Topics</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TransactionEntryNumber__c</fullName>
        <description>The sequential number of this log entry within the transaction</description>
        <label>Transaction Entry Number</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TransactionId__c</fullName>
        <label>Transaction ID</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TriggerIsExecuting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger Is Executing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TriggerOperationType__c</fullName>
        <label>Trigger Operation Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TriggerSObjectType__c</fullName>
        <label>Trigger SObject Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserLicenseDefinitionKey__c</fullName>
        <description>https://developer.salesforce.com/docs/atlas.en-us.object_reference.meta/object_reference/sforce_api_objects_userlicense.htm</description>
        <label>User License Definition Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserLicenseId__c</fullName>
        <label>User License ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserLicenseName__c</fullName>
        <label>User License Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserLoggingLevelOrdinal__c</fullName>
        <label>User Logging Level Ordinal</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UserLoggingLevel__c</fullName>
        <label>User Logging Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserRoleId__c</fullName>
        <label>User Role ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserRoleName__c</fullName>
        <label>User Role Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserType__c</fullName>
        <label>User Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Log Entry Event</label>
    <pluralLabel>Log Entry Events</pluralLabel>
</CustomObject>